fear: exploratory analysis finished

--- a/laboratorio8.ipynb
+++ b/laboratorio8.ipynb
@@ -136,7 +136,7 @@
     "parts   = nb_path.split(\"/\")\n",
     "# raíz del repo\n",
     "REPO_ROOT = \"/Workspace/\" + \"/\".join(parts[:4])\n",
-    "OUT_DIR   = os.path.join(REPO_ROOT, \"Data\")\n",
+    "OUT_DIR = \"/Volumes/workspace/default/lab8/Data\"\n",
     "os.makedirs(OUT_DIR, exist_ok=True)\n",
     "\n",
     "# Funciones auxiliares\n",
@@ -356,8 +356,8 @@
     "from pyspark.sql import functions as F\n",
     "\n",
     "# Rutas\n",
-    "ROOT_DIR = \"/Workspace/Users/ort22305@uvg.edu.gt/Lab8_DS\" \n",
-    "DATA_DIR = os.path.join(ROOT_DIR, \"Data\") \n",
+    "ROOT_DIR = \"/Volumes/workspace/default/lab8\" \n",
+    "DATA_DIR = f\"{ROOT_DIR}/Data\"\n",
     "assert os.path.isdir(DATA_DIR), f\"No existe {DATA_DIR}. Genera antes los CSV por hoja.\"\n",
     "\n",
     "# Utilidades\n",
