feat: exercise 1 donde

--- a/laboratorio8.ipynb
+++ b/laboratorio8.ipynb
@@ -652,6 +652,134 @@
     "display(spark.sql(\"SELECT * FROM vehiculos_long ORDER BY anio, cuadro LIMIT 15\"))\n",
     "display(spark.sql(\"SELECT * FROM victimas_long  ORDER BY anio, cuadro LIMIT 15\"))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6130be8e-1b72-45c0-ad7a-46d879ce54dd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### 1. Registros por tabla + show(), describe, summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e1908bf5-c71c-4c6b-a1d5-234d825580f2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "DATA_DIR = \"/Volumes/workspace/default/lab8/Data\"\n",
+    "\n",
+    "# Hechos\n",
+    "hechos = (spark.read.option(\"header\", True).csv(f\"{DATA_DIR}/hechos_long.csv\"))\n",
+    "hechos.createOrReplaceTempView(\"hechos_long\")\n",
+    "\n",
+    "# Vehículos\n",
+    "vehiculos = (spark.read.option(\"header\", True).csv(f\"{DATA_DIR}/vehiculos_long.csv\"))\n",
+    "vehiculos.createOrReplaceTempView(\"vehiculos_long\")\n",
+    "\n",
+    "# Víctimas\n",
+    "victimas = (spark.read.option(\"header\", True).csv(f\"{DATA_DIR}/victimas_long.csv\"))\n",
+    "victimas.createOrReplaceTempView(\"victimas_long\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "11a5ffca-2e86-4d73-a808-4defd19f1881",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(spark.catalog.tableExists(\"hechos_long\"),\n",
+    "      spark.catalog.tableExists(\"vehiculos_long\"),\n",
+    "      spark.catalog.tableExists(\"victimas_long\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f0d9001a-3e25-4405-b95d-94f9bd1b548f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Conteos\n",
+    "counts = [\n",
+    "    (\"hechos\",    hechos.count()),\n",
+    "    (\"vehiculos\", vehiculos.count()),\n",
+    "    (\"victimas\",  victimas.count()),\n",
+    "]\n",
+    "spark.createDataFrame(counts, [\"tabla\",\"filas\"]).show(truncate=False)\n",
+    "\n",
+    "# Muestras\n",
+    "print(\"\\n[hechos] ejemplo:\")\n",
+    "hechos.show(10, truncate=False)\n",
+    "\n",
+    "print(\"\\n[vehiculos] ejemplo:\")\n",
+    "vehiculos.show(10, truncate=False)\n",
+    "\n",
+    "print(\"\\n[victimas] ejemplo:\")\n",
+    "victimas.show(10, truncate=False)\n",
+    "\n",
+    "# Describe / summary de columnas clave\n",
+    "(\n",
+    "    hechos.select(\"anio\",\"dim1\",\"dim1_val\",\"dim2\",\"dim2_val\",\"valor\")\n",
+    "    .describe().show()\n",
+    ")\n",
+    "hechos.select(\"anio\",\"valor\").summary().show()\n",
+    "\n",
+    "(\n",
+    "    vehiculos.select(\"anio\",\"dim1\",\"dim1_val\",\"dim2\",\"dim2_val\",\"valor\")\n",
+    "    .describe().show()\n",
+    ")\n",
+    "vehiculos.select(\"anio\",\"valor\").summary().show()\n",
+    "\n",
+    "(\n",
+    "    victimas.select(\"anio\",\"dim1\",\"dim1_val\",\"dim2\",\"dim2_val\",\"valor\")\n",
+    "    .describe().show()\n",
+    ")\n",
+    "victimas.select(\"anio\",\"valor\").summary().show()\n"
+   ]
   }
  ],
  "metadata": {
