--- a/laboratorio8.ipynb
+++ b/laboratorio8.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "8086f3be-c8f0-4720-8969-149fa54e9143",
      "showTitle": false,
@@ -27,10 +24,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "52c12913-162e-413d-b52f-4c24f27629a6",
      "showTitle": false,
@@ -47,10 +41,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "c8122b58-bde9-4955-90c4-f769567bb706",
      "showTitle": false,
@@ -88,10 +79,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "85368396-49dd-4df4-8243-793560a99858",
      "showTitle": false,
@@ -109,10 +97,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "088d8e6a-1443-493f-ad28-29ed8a6a8d2b",
      "showTitle": false,
@@ -234,10 +219,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "8f0b96fc-3146-4991-824a-8aed9a555ef5",
      "showTitle": false,
@@ -1046,8 +1028,8 @@
     "from pyspark.sql import functions as F\n",
     "\n",
     "# Lee TODOS los CSV por carpeta (varios años) con wildcard\n",
-    "HECHOS_GLOB    = \"/Volumes/workspace/default/lab8/csv/hechos/*.csv\"\n",
-    "VEHICULOS_GLOB = \"/Volumes/workspace/default/lab8/csv/vehiculos/*.csv\"\n",
+    "HECHOS_GLOB    = \"/Volumes/workspace/default/lab8-ds/csv/hechos/*.csv\"\n",
+    "VEHICULOS_GLOB = \"/Volumes/workspace/default/lab8-ds/csv/vehiculos/*.csv\"\n",
     "\n",
     "hechos    = spark.read.csv(HECHOS_GLOB, header=True, inferSchema=True)\n",
     "vehiculos = spark.read.csv(VEHICULOS_GLOB, header=True, inferSchema=True)\n",
@@ -1244,6 +1226,349 @@
     "    .withColumn(\"tipo_eve\", F.upper(F.trim(F.col(\"tipo_eve\"))))\n",
     "    .withColumn(\"color_veh\", F.upper(F.trim(F.col(\"color_veh\"))))\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "79349e31-ca22-4fa4-af5a-4d83a2ce4b59",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "FALLE_GLOB = \"/Volumes/workspace/default/lab8-ds/csv/fallecidos-lesionados/*.csv\"\n",
+    "fallecidos_lesionados = spark.read.csv(FALLE_GLOB, header=True, inferSchema=True)\n",
+    "\n",
+    "print(\"Listo: 'fallecidos_lesionados' cargado.\")\n",
+    "display(fallecidos_lesionados.limit(5))\n",
+    "\n",
+    "VEHICULOS_GLOB = \"/Volumes/workspace/default/lab8-ds/csv/vehiculos/*.csv\"\n",
+    "\n",
+    "vehiculos_raw = (spark.read\n",
+    "    .option(\"header\", True)\n",
+    "    .option(\"inferSchema\", False)\n",
+    "    .csv(VEHICULOS_GLOB)\n",
+    ")\n",
+    "\n",
+    "vehiculos = (vehiculos_raw\n",
+    "    .withColumn(\n",
+    "        \"ano_ocu_int\",\n",
+    "        F.expr(\"\"\"\n",
+    "            try_cast(\n",
+    "              nullif(regexp_replace(coalesce(ano_ocu,''), '[^0-9]', ''), '')\n",
+    "              as int\n",
+    "            )\n",
+    "        \"\"\")\n",
+    "    )\n",
+    "    .withColumn(\n",
+    "        \"modelo_veh_digits\",\n",
+    "        F.regexp_extract(F.coalesce(F.col(\"modelo_veh\"), F.lit(\"\")), r\"(\\d{4})\", 1)\n",
+    "    )\n",
+    "    .withColumn(\n",
+    "        \"modelo_veh_int\",\n",
+    "        F.when(\n",
+    "            F.col(\"modelo_veh_digits\") != \"\",\n",
+    "            F.expr(\"try_cast(modelo_veh_digits as int)\")\n",
+    "        )\n",
+    "        .otherwise(F.lit(None).cast(\"int\"))\n",
+    "    )\n",
+    "    .withColumn(\n",
+    "        \"modelo_veh_int\",\n",
+    "        F.when(F.col(\"modelo_veh_int\").between(1900, 2099), F.col(\"modelo_veh_int\"))\n",
+    "         .otherwise(F.lit(None).cast(\"int\"))\n",
+    "    )\n",
+    "    .drop(\"modelo_veh_digits\")\n",
+    ")\n",
+    "\n",
+    "print(\"Listo: 'vehiculos' cargado.\")\n",
+    "display(vehiculos.limit(5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c72277c4-d69b-4e4c-8541-d7fc597d5d1d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ================== 1.1) Conteo y muestreo ==================\n",
+    "n_hechos     = hechos.count()\n",
+    "n_vehiculos  = vehiculos.count()\n",
+    "n_fall_les   = fallecidos_lesionados.count()\n",
+    "\n",
+    "print(f\"hechos: {n_hechos:,}\")\n",
+    "print(f\"vehiculos: {n_vehiculos:,}\")\n",
+    "print(f\"fallecidos_lesionados: {n_fall_les:,}\")\n",
+    "\n",
+    "print(\"\\n[hechos]\");            hechos.select(\"ano_ocu\",\"mes_ocu\",\"dia_sem_ocu\",\"departamento\",\"tipo_eve\",\"hora_ocu\").show(10, truncate=False)\n",
+    "print(\"\\n[vehiculos]\");         vehiculos.select(\"ano_ocu\",\"mes_ocu\",\"departamento\",\"sexo_per\",\"tipo_veh\",\"color_veh\",\"modelo_veh\",\"tipo_eve\").show(10, truncate=False)\n",
+    "print(\"\\n[fallecidos_lesionados]\"); fallecidos_lesionados.select(\"ano_ocu\",\"mes_ocu\",\"depto_ocu\",\"zona_ocu\",\"edad_per\",\"tipo_eve\",\"fall_les\").show(10, truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "20f89ff9-0385-465c-898b-90479f6b6178",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ================== 1.2) Decribe y summary hechos ==================\n",
+    "hechos_num = hechos.select(\n",
+    "    F.expr(\"try_cast(ano_ocu as int)\").alias(\"ano_ocu_int\"),\n",
+    "    F.expr(\"try_cast(regexp_extract(hora_ocu, '\\\\\\\\d+', 0) as int)\").alias(\"hora_ocu_int\")\n",
+    ")\n",
+    "\n",
+    "print(\"[hechos] describe()\")\n",
+    "display(hechos_num.describe())\n",
+    "\n",
+    "print(\"[hechos] summary()\")\n",
+    "display(hechos_num.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ba2e56c5-de73-4a32-bcb9-ac566189c2ea",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ================== 1.3) Decribe y summary vehículos ==================\n",
+    "vehiculos_num = vehiculos.select(\"ano_ocu_int\",\"modelo_veh_int\")\n",
+    "\n",
+    "print(\"[vehiculos] describe()\")\n",
+    "display(vehiculos_num.describe())\n",
+    "\n",
+    "print(\"[vehiculos] summary()\")\n",
+    "display(vehiculos_num.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3d970210-a4ed-40ad-a7a2-0dd1b0d6f6ca",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ================== 1.4) Decribe y summary fallecidos/lesionados ==================\n",
+    "falle_ll_num = fallecidos_lesionados.select(\n",
+    "    F.expr(\"try_cast(ano_ocu as int)\").alias(\"ano_ocu_int\"),\n",
+    "    F.expr(\"\"\"\n",
+    "        case when lower(coalesce(edad_per,'')) in ('ignorado','ignorada','')\n",
+    "             then null\n",
+    "             else try_cast(edad_per as int)\n",
+    "        end\n",
+    "    \"\"\").alias(\"edad_per_int\"),\n",
+    "    F.expr(\"\"\"\n",
+    "        case when lower(coalesce(zona_ocu,'')) in ('ignorado','ignorada','')\n",
+    "             then null\n",
+    "             else try_cast(zona_ocu as int)\n",
+    "        end\n",
+    "    \"\"\").alias(\"zona_ocu_int\")\n",
+    ")\n",
+    "\n",
+    "print(\"[fallecidos_lesionados] describe()\")\n",
+    "display(falle_ll_num.describe())\n",
+    "\n",
+    "print(\"[fallecidos_lesionados] summary()\")\n",
+    "display(falle_ll_num.summary())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8baf900c-0453-4026-91fe-88e1c2a3b5fb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ================== 2) Comparación de años ==================\n",
+    "\n",
+    "# Hechos: años\n",
+    "hechos_years = (hechos\n",
+    "    .select(F.expr(\"try_cast(ano_ocu as int)\").alias(\"anio\"))\n",
+    "    .where(F.col(\"anio\").isNotNull())\n",
+    "    .distinct().orderBy(\"anio\")\n",
+    ")\n",
+    "print(\"[hechos] años disponibles:\")\n",
+    "hechos_years.show(200, truncate=False)\n",
+    "\n",
+    "# Vehículos: si ya tienes 'ano_ocu_int', úsalo; si no, intenta try_cast\n",
+    "vehiculos_years_col = \"ano_ocu_int\" if \"ano_ocu_int\" in vehiculos.columns else \"anio\"\n",
+    "vehiculos_years = (vehiculos\n",
+    "    .select(F.col(vehiculos_years_col).alias(\"anio\") if \"ano_ocu_int\" in vehiculos.columns\n",
+    "            else F.expr(\"try_cast(ano_ocu as int)\").alias(\"anio\"))\n",
+    "    .where(F.col(\"anio\").isNotNull())\n",
+    "    .distinct().orderBy(\"anio\")\n",
+    ")\n",
+    "print(\"[vehiculos] años disponibles:\")\n",
+    "vehiculos_years.show(200, truncate=False)\n",
+    "\n",
+    "# Fallecidos/Lesionados: años\n",
+    "falle_years = (fallecidos_lesionados\n",
+    "    .select(F.expr(\"try_cast(ano_ocu as int)\").alias(\"anio\"))\n",
+    "    .where(F.col(\"anio\").isNotNull())\n",
+    "    .distinct().orderBy(\"anio\")\n",
+    ")\n",
+    "print(\"[fallecidos_lesionados] años disponibles:\")\n",
+    "falle_years.show(200, truncate=False)\n",
+    "\n",
+    "# Comparar aparición\n",
+    "all_years = (hechos_years.select(\"anio\")\n",
+    "             .union(vehiculos_years.select(\"anio\"))\n",
+    "             .union(falle_years.select(\"anio\"))\n",
+    "             .distinct())\n",
+    "\n",
+    "tabla = (all_years\n",
+    "    .join(hechos_years.withColumn(\"in_hechos\", F.lit(True)), [\"anio\"], \"left\")\n",
+    "    .join(vehiculos_years.withColumn(\"in_vehiculos\", F.lit(True)), [\"anio\"], \"left\")\n",
+    "    .join(falle_years.withColumn(\"in_fallecidos_lesionados\", F.lit(True)), [\"anio\"], \"left\")\n",
+    "    .select(\n",
+    "        \"anio\",\n",
+    "        F.coalesce(\"in_hechos\", F.lit(False)).alias(\"hechos\"),\n",
+    "        F.coalesce(\"in_vehiculos\", F.lit(False)).alias(\"vehiculos\"),\n",
+    "        F.coalesce(\"in_fallecidos_lesionados\", F.lit(False)).alias(\"fallecidos_lesionados\")\n",
+    "    )\n",
+    "    .orderBy(\"anio\")\n",
+    ")\n",
+    "\n",
+    "print(\"Tabla de presencia por año:\")\n",
+    "tabla.show(200, truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b2e1c216-dda7-41c0-a9b1-7b287718b996",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ================== 3) Diferentes tipos de accidentes ==================\n",
+    "\n",
+    "# Hechos\n",
+    "hechos.select(F.upper(F.trim(F.col(\"tipo_eve\"))).alias(\"tipo_accidente\")) \\\n",
+    "     .distinct() \\\n",
+    "     .orderBy(\"tipo_accidente\") \\\n",
+    "     .show(100, truncate=False)\n",
+    "\n",
+    "# Vehículos\n",
+    "vehiculos.select(F.upper(F.trim(F.col(\"tipo_eve\"))).alias(\"tipo_accidente\")) \\\n",
+    "        .distinct() \\\n",
+    "        .orderBy(\"tipo_accidente\") \\\n",
+    "        .show(100, truncate=False)\n",
+    "\n",
+    "\n",
+    "# Fallecidos/lesionados\n",
+    "fallecidos_lesionados.select(F.upper(F.trim(F.col(\"tipo_eve\"))).alias(\"tipo_accidente\")) \\\n",
+    "                     .distinct() \\\n",
+    "                     .orderBy(\"tipo_accidente\") \\\n",
+    "                     .show(100, truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dadfd64f-70de-44e9-9308-70ca2cddb2e0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ================== 4) Departamentos únicos ==================\n",
+    "\n",
+    "# Hechos\n",
+    "hechos.select(\"departamento\").distinct().orderBy(\"departamento\").show(50, truncate=False)\n",
+    "\n",
+    "# Vehículos\n",
+    "vehiculos.select(\"depto_ocu\").distinct().orderBy(\"depto_ocu\").show(50, truncate=False)\n",
+    "\n",
+    "\n",
+    "# Fallecidos/lesionados\n",
+    "fallecidos_lesionados.select(\"depto_ocu\").distinct().orderBy(\"depto_ocu\").show(50, truncate=False)\n"
    ]
   },
   {
@@ -1476,10 +1801,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "6722d5e7-ebef-442a-96e8-7f13840d1f57",
      "showTitle": false,
@@ -1702,10 +2024,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "69e0710f-ee64-4500-b8d7-2e138fb3efa3",
      "showTitle": false,
@@ -2130,10 +2449,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "58079db1-b60f-4bd7-a2e1-3bfc9564eebc",
      "showTitle": false,
