--- a/laboratorio8.ipynb
+++ b/laboratorio8.ipynb
@@ -1006,6 +1006,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "285a8d90-b636-41cb-8070-7308fd7891bc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1295,6 +1311,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3f807a73-8fa0-4764-b5d7-1129467f2cab",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### Análisis exploratorio"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1521,12 +1553,14 @@
     "# ================== 3) Diferentes tipos de accidentes ==================\n",
     "\n",
     "# Hechos\n",
+    "print(\"[hechos] tipos de accidentes:\")\n",
     "hechos.select(F.upper(F.trim(F.col(\"tipo_eve\"))).alias(\"tipo_accidente\")) \\\n",
     "     .distinct() \\\n",
     "     .orderBy(\"tipo_accidente\") \\\n",
     "     .show(100, truncate=False)\n",
     "\n",
     "# Vehículos\n",
+    "print(\"[vehículos] tipos de accidentes:\")\n",
     "vehiculos.select(F.upper(F.trim(F.col(\"tipo_eve\"))).alias(\"tipo_accidente\")) \\\n",
     "        .distinct() \\\n",
     "        .orderBy(\"tipo_accidente\") \\\n",
@@ -1534,6 +1568,7 @@
     "\n",
     "\n",
     "# Fallecidos/lesionados\n",
+    "print(\"[fallecidos/lesionados] tipos de accidentes:\")\n",
     "fallecidos_lesionados.select(F.upper(F.trim(F.col(\"tipo_eve\"))).alias(\"tipo_accidente\")) \\\n",
     "                     .distinct() \\\n",
     "                     .orderBy(\"tipo_accidente\") \\\n",
@@ -1569,6 +1604,22 @@
     "\n",
     "# Fallecidos/lesionados\n",
     "fallecidos_lesionados.select(\"depto_ocu\").distinct().orderBy(\"depto_ocu\").show(50, truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "500a4387-bb7f-45ef-94c7-6e42bdddb04c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### Preguntas de análisis"
    ]
   },
   {
@@ -2331,8 +2382,8 @@
     "# ================== 8) Join Hechos ⨝ Vehículos (año, mes, depto, tipo) — FIX cast año ==================\n",
     "from pyspark.sql import functions as F\n",
     "\n",
-    "HECHOS_GLOB    = \"/Volumes/workspace/default/lab8/csv/hechos/*.csv\"\n",
-    "VEHICULOS_GLOB = \"/Volumes/workspace/default/lab8/csv/vehiculos/*.csv\"\n",
+    "HECHOS_GLOB    = \"/Volumes/workspace/default/lab8-ds/csv/hechos/*.csv\"\n",
+    "VEHICULOS_GLOB = \"/Volumes/workspace/default/lab8-ds/csv/vehiculos/*.csv\"\n",
     "\n",
     "# Releer TODO como string\n",
     "h_src = spark.read.csv(HECHOS_GLOB, header=True, inferSchema=False)\n",
@@ -2704,6 +2755,214 @@
     "# Top 10 departamentos con más vehículos/accidente\n",
     "top10 = prom_reload.orderBy(F.desc(\"vehiculos_por_accidente\")).limit(10)\n",
     "display(top10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a54341c1-4d24-4a58-8353-ca8b0d2a2a9f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ================== 10) Top 5 colores de vehiculos con más accidentes ==================\n",
+    "(vehiculos\n",
+    " .filter(F.col(\"color_veh\").isNotNull() & (F.length(F.trim(F.col(\"color_veh\"))) > 0))\n",
+    " .filter(~F.upper(F.col(\"color_veh\")).isin(\"IGNORADO\"))\n",
+    " .groupBy(\"color_veh\")\n",
+    " .agg(F.count(F.lit(1)).alias(\"accidentes\"))\n",
+    " .orderBy(F.desc(\"accidentes\"))\n",
+    " .limit(5)\n",
+    " .show(truncate=False)\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4a850a74-76ff-4c8c-8743-09ab1b07389c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ================== 11) Lesionados por atropello 2024 - por mes ==================\n",
+    "\n",
+    "falle_2024 = (fallecidos_lesionados\n",
+    "    .withColumn(\"ano_int\", F.expr(\"try_cast(ano_ocu as int)\"))\n",
+    "    .withColumn(\"tipo_eve_lc\", F.lower(F.col(\"tipo_eve\")))\n",
+    "    .withColumn(\"fall_les_lc\", F.lower(F.col(\"fall_les\")))\n",
+    "    .withColumn(\"mes_lc\", F.lower(F.col(\"mes_ocu\")))\n",
+    "    .filter( (F.col(\"ano_int\")==2023) &\n",
+    "             (F.col(\"tipo_eve_lc\")==\"atropello\") &\n",
+    "             (F.col(\"fall_les_lc\")==\"lesionado\") )\n",
+    ")\n",
+    "\n",
+    "month_order = {\n",
+    "    \"enero\":1, \"febrero\":2, \"marzo\":3, \"abril\":4, \"mayo\":5, \"junio\":6,\n",
+    "    \"julio\":7, \"agosto\":8, \"septiembre\":9, \"octubre\":10, \"noviembre\":11, \"diciembre\":12\n",
+    "}\n",
+    "month_map = F.create_map([x for kv in month_order.items() for x in (F.lit(kv[0]), F.lit(kv[1]))])\n",
+    "\n",
+    "lesiones_mensual = (falle_2024\n",
+    "    .groupBy(\"mes_lc\")\n",
+    "    .agg(F.count(F.lit(1)).alias(\"lesionados\"))\n",
+    "    .withColumn(\"mes_num\", F.element_at(month_map, F.col(\"mes_lc\")))\n",
+    "    .orderBy(\"mes_num\")\n",
+    "    .select(F.col(\"mes_lc\").alias(\"mes\"), \"lesionados\")\n",
+    ")\n",
+    "\n",
+    "display(lesiones_mensual)\n",
+    "\n",
+    "# Gráfica\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "pdf = lesiones_mensual.toPandas()\n",
+    "pdf = pdf.sort_values(by=\"mes\", key=lambda s: s.map(month_order))\n",
+    "\n",
+    "plt.figure(figsize=(8,4))\n",
+    "plt.plot(pdf[\"mes\"], pdf[\"lesionados\"], marker=\"o\")\n",
+    "plt.title(\"Lesionados por atropello en 2024 (por mes)\")\n",
+    "plt.xlabel(\"Mes\")\n",
+    "plt.ylabel(\"Cantidad de lesionados\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid(True, linestyle=\"--\", alpha=0.4)\n",
+    "plt.tight_layout()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a8291368-0de0-46a9-9ae6-f39a9b030429",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ================== 12) Fallecidos por tipo de accidente ==================\n",
+    "\n",
+    "# Unificar por llave\n",
+    "fl_src = spark.read.csv(FALLE_GLOB, header=True, inferSchema=False)\n",
+    "\n",
+    "def unify_cols_fl(df):\n",
+    "    ren = {}\n",
+    "    if \"departamento\" not in df.columns and \"depto_ocu\" in df.columns:\n",
+    "        ren[\"depto_ocu\"] = \"departamento\"\n",
+    "    if \"anio\" not in df.columns:\n",
+    "        if \"ano_ocu\" in df.columns: ren[\"ano_ocu\"] = \"anio_raw\"\n",
+    "    if \"mes\" not in df.columns:\n",
+    "        if \"mes_ocu\" in df.columns: ren[\"mes_ocu\"] = \"mes_raw\"\n",
+    "    if \"tipo_accidente\" not in df.columns:\n",
+    "        if \"tipo_eve\" in df.columns: ren[\"tipo_eve\"] = \"tipo_raw\"\n",
+    "    out = df\n",
+    "    for k,v in ren.items():\n",
+    "        out = out.withColumnRenamed(k, v)\n",
+    "    return out\n",
+    "\n",
+    "fl = unify_cols_fl(fl_src)\n",
+    "\n",
+    "fl = (fl\n",
+    "      .withColumn(\"departamento\",   clean_depto(\"departamento\"))\n",
+    "      .withColumn(\"anio\",           clean_anio(pick(fl, \"anio_raw\", \"anio\")))\n",
+    "      .withColumn(\"mes\",            clean_mes(pick(fl, \"mes_raw\",  \"mes\")))\n",
+    "      .withColumn(\"tipo_accidente\", clean_tipo(pick(fl, \"tipo_raw\",\"tipo_accidente\")))\n",
+    "      .withColumn(\"fall_les_norm\",  F.upper(F.trim(F.col(\"fall_les\"))))\n",
+    "      .select(\"anio\",\"mes\",\"departamento\",\"tipo_accidente\",\"fall_les_norm\")\n",
+    ")\n",
+    "\n",
+    "VALID_MES = r\"^(0[1-9]|1[0-2])$\"\n",
+    "fl_k = fl.filter(\n",
+    "    (F.col(\"anio\").isNotNull()) &\n",
+    "    (F.col(\"mes\").rlike(VALID_MES)) &\n",
+    "    (F.col(\"departamento\").isNotNull()) &\n",
+    "    (F.col(\"tipo_accidente\").isNotNull())\n",
+    ")\n",
+    "\n",
+    "FL = (fl_k\n",
+    "      .groupBy(\"anio\",\"mes\",\"departamento\",\"tipo_accidente\")\n",
+    "      .agg(\n",
+    "          F.sum(F.when(F.col(\"fall_les_norm\")==\"FALLECIDO\", 1).otherwise(0)).alias(\"fallecidos\"),\n",
+    "          F.sum(F.when(F.col(\"fall_les_norm\")==\"LESIONADO\", 1).otherwise(0)).alias(\"lesionados\")\n",
+    "      )\n",
+    "      .withColumn(\"total_fl\", F.col(\"fallecidos\")+F.col(\"lesionados\"))\n",
+    ")\n",
+    "\n",
+    "HV_FL = (HV.join(FL, on=[\"anio\",\"mes\",\"departamento\",\"tipo_accidente\"], how=\"left\")\n",
+    "           .fillna({\"fallecidos\":0, \"lesionados\":0, \"total_fl\":0})\n",
+    ")\n",
+    "\n",
+    "print(f\"Registros combinados (H⨝V⨝FL): {HV_FL.count():,}\")\n",
+    "display(HV_FL.orderBy(\"anio\",\"mes\",\"departamento\",\"tipo_accidente\").limit(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "18c7049a-b69c-43d4-9604-ff246ee117cd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Fallecidos por accidente\n",
+    "fallecidos_por_tipo = (\n",
+    "    HV_FL.groupBy(\"tipo_accidente\")\n",
+    "         .agg(F.sum(F.col(\"fallecidos\")).alias(\"total_fallecidos\"))\n",
+    "         .orderBy(F.desc(\"total_fallecidos\"))\n",
+    ")\n",
+    "\n",
+    "display(fallecidos_por_tipo)\n",
+    "\n",
+    "# Gráfica\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "pdf = fallecidos_por_tipo.toPandas()\n",
+    "\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.barh(pdf[\"tipo_accidente\"], pdf[\"total_fallecidos\"])\n",
+    "plt.xlabel(\"Total de fallecidos\")\n",
+    "plt.ylabel(\"Tipo de accidente\")\n",
+    "plt.title(\"Fallecidos por tipo de accidente\")\n",
+    "plt.gca().invert_yaxis()  # para que el mayor quede arriba\n",
+    "plt.tight_layout()\n"
    ]
   }
  ],
